# lechuza-server

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
charito-service/: Dockerfile  README.md  requirements.txt
charito-service/src/: app.py  broadcast.py  config.py  identity.py  logger.py  poller.py  state.py
login-service/: Dockerfile  README.md  docker-entrypoint.sh
login-service/conf/: nginx.conf  protected-users.map
login-service/html/: error.html  index.html
mensagelo/: Dockerfile
mensagelo/email_client/: client.py  config.py
mensagelo/email_service/: app.py  config.py  main.py  requirements.txt
modbus-mw-service/: Dockerfile  README.md  requirements.txt
modbus-mw-service/src/: app.py  bootstrap.py  config.py
modbus-mw-service/src/modbus/: modbus_driver.py  server_ge_emar.py  server_mb_middleware.py  server_mb_reles.py
panelexemys/: README.md  config.py
pve-service/: Dockerfile  README.md  requirements.txt
pve-service/src/: app.py  collector.py  config.py  history.py  mqtt_pub.py  poller.py  repository.py
router-telef-service/: Dockerfile  README.md  requirements.txt
router-telef-service/src/: app.py  config.py  mqtt_publisher.py  tcp_probe.py
scada-citec-service/: Dockerfile  README.md
scada-citec-service/backend/: __init__.py  app.py  catalog.py  config.py  daemon_client.py  state_cache.py
scada-citec-service/frontend/: app.js  index.html  styles.css
shared/: logosaurio.py
shared/timeauthority-pkg/: pyproject.toml
shared/timeauthority-pkg/src/timeauthority/: __init__.py  service.py
(+16 files in other folders)
